@@ -43,9 +43,9 @@
   (require 'cl))
 
 (require 'eieio)
-(require 'working)
 
 (require 'rudel-errors)
+(require 'rudel-compat) ;; for pulsing progress reporter
 
 
 ;;; Errors related to the state machine
@@ -296,8 +296,9 @@ when MACHINE deadlocks or cycles through states not in either
 list infinitely."
   ;; Wait until MACHINE enter a state in SUCCESS-STATES or
   ;; ERROR-STATES.
-  (let ((result
-	 (working-status-forms (concat message " (%s)") "done"
+  (let* ((reporter (make-pulsing-progress-reporter message))
+	 (result
+	 ;;(working-status-forms (concat message " (%s)") "done"
 	   (catch 'state-wait
 	     (while t
 	       ;; Retrieve current state.
@@ -309,8 +310,11 @@ list infinitely."
 		 (when (memq symbol error-states)
 		   (throw 'state-wait (cons 'error   (cons symbol state))))
 		 ;; Update progress indicator and sleep.
-		 (working-dynamic-status nil symbol)
-		 (sleep-for 0.05)))))))
+		 ;;(working-dynamic-status nil symbol)
+		 (progress-reporter-pulse 
+		  reporter (format "%s (%s)"  message symbol))
+		 (sleep-for 0.05))))))
+    (progress-reporter-done reporter)
 
     ;; If MACHINE ended up in an error state, signal
     (unless (eq (car result) 'success)
